--- a/index.html
+++ b/index.html
@@ -454,6 +454,46 @@
           </div>
         </div>
       </section>
+
+      <!-- install mobile -->
+      <section class="install">
+        <div class="container">
+          <div class="install__inner">
+            <!-- inner left -->
+            <figure>
+              <img
+                src="./assets/img/Rectangle.png"
+                alt=""
+                class="install__img"
+              />
+            </figure>
+            <!-- inner right -->
+            <section class="install__content">
+              <h2 class="section-heading install__heading">
+                Take back your smile with dentures
+              </h2>
+              <p class="install__desc">
+                If you’re missing multiple teeth due to decay, injury, or the
+                natural aging process, dentures might be the perfect solution.
+              </p>
+              <div class="install__row">
+                <a href="#!"
+                  ><img
+                    src="./assets/img/ggplay.svg"
+                    alt="Google Play"
+                    class="install__btn-img"
+                /></a>
+                <a href="#!"
+                  ><img
+                    src="./assets/img/appstore.svg"
+                    alt="App Store"
+                    class="install__btn-img"
+                /></a>
+              </div>
+            </section>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
