p1 responsive navbar va menu

--- a/index.html
+++ b/index.html
@@ -91,6 +91,15 @@
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <!-- style -->
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <!-- animation aos -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <!-- animation -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <!-- responsive css -->
+    <link rel="stylesheet" href="./assets/css/reponsive.css" />
     <title>Shine Smile</title>
   </head>
   <body>
@@ -100,7 +109,10 @@
         <div class="header-top">
           <!-- logo -->
           <a href="./"
-            ><img src="./assets/img/logo.svg" alt="shine smile" class="logo"
+            ><img
+              src="./assets/img/logo.svg"
+              alt="shine smile"
+              class="logo header__logo"
           /></a>
           <!-- nav -->
           <div class="navbar">
@@ -158,12 +170,42 @@
       </div>
     </header>
 
+    <!-- tablet mobile header -->
+    <div class="mobile-header">
+      <input
+        type="checkbox"
+        name="menu-checkbox"
+        id="menu-checkbox"
+        class="menu-checkbox"
+        hidden
+      />
+      <label for="menu-checkbox">
+        <svg
+          class="menu-header__icon"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 448 512"
+        >
+          <path
+            fill="currentColor"
+            d="M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z"
+          />
+        </svg>
+      </label>
+      <!-- overlay -->
+      <label for="menu-checkbox" class="menu-overlay"></label>
+    </div>
+
     <!-- main -->
     <main>
       <!-- services -->
       <section class="services">
         <div class="container">
-          <h2 class="services__heading section-heading">Our services</h2>
+          <h2
+            class="services__heading section-heading"
+            data-aos="animate__bounce"
+          >
+            Our services
+          </h2>
           <p class="services__desc section-desc">
             Exceptional dental care of all ages. Your great smile begins with a
             great dentist.
@@ -176,6 +218,7 @@
                 src="./assets/img/dentist.jpg"
                 alt="Our services"
                 class="services__img"
+                data-aos="zoom-in"
               />
             </figure>
             <!-- services right -->
@@ -265,7 +308,9 @@
       <!-- work -->
       <section class="work">
         <div class="container">
-          <h2 class="section-heading">How it works</h2>
+          <h2 class="section-heading" data-aos="animate__flipInX">
+            How it works
+          </h2>
           <p class="section-desc work__desc">
             Exceptional dental care for all ages. Your great smile begins with a
             great dentist.
@@ -356,7 +401,13 @@
       <section class="team">
         <div class="container">
           <div class="team-header">
-            <h2 class="section-heading">Our virtual dentist</h2>
+            <h2
+              class="section-heading"
+              data-aos="zoom-in"
+              data-aos-delay="1000"
+            >
+              Our virtual dentist
+            </h2>
             <a href="#!" class="btn team__cta">Meet our dentist</a>
           </div>
 
@@ -748,5 +799,14 @@
         </div>
       </section>
     </main>
+    <!-- js animation -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        useClassNames: true,
+        initClassName: false,
+        animatedClassName: "animate__animated",
+      });
+    </script>
   </body>
 </html>
