--- a/index.html
+++ b/index.html
@@ -196,31 +196,35 @@
 
       <!-- menu content -->
       <div class="menu-drawer">
-        <!-- menu top --> 
-         <div class="menu-drawer__top">
+        <!-- menu top -->
+        <div class="menu-drawer__top">
           <!-- logo -->
           <a href="./"
-          ><img
-            src="./assets/img/logo.svg"
-            alt="shine smile"
-            class="logo"
-        /></a>
-           <!-- icon close menu -->
-           <label for="menu-checkbox">
-             <svg class="close__menu" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-              <path fill="currentColor" d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM175 175c9.4-9.4 24.6-9.4 33.9 0l47 47 47-47c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-47 47 47 47c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-47-47-47 47c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l47-47-47-47c-9.4-9.4-9.4-24.6 0-33.9z"/></svg>
-           </label>
-         </div>
+            ><img src="./assets/img/logo.svg" alt="shine smile" class="logo"
+          /></a>
+          <!-- icon close menu -->
+          <label for="menu-checkbox">
+            <svg
+              class="close__menu"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 512 512"
+            >
+              <path
+                fill="currentColor"
+                d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM175 175c9.4-9.4 24.6-9.4 33.9 0l47 47 47-47c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-47 47 47 47c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-47-47-47 47c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l47-47-47-47c-9.4-9.4-9.4-24.6 0-33.9z"
+              />
+            </svg>
+          </label>
+        </div>
         <!-- nav mobile -->
-         <ul id="navbar__list--mobile"></ul>
-         <!-- sd js để copy -->
-          <script>
-            const navPC = document.querySelector("#navbar__list--pc");
-            const navMb = document.querySelector("#navbar__list--mobile");
-            // sao chép
-            navMb.innerHTML=navPC.innerHTML;
-          </script>
-      </div>
+        <ul id="navbar__list--mobile"></ul>
+        <!-- sd js để copy -->
+        <script>
+          const navPC = document.querySelector("#navbar__list--pc");
+          const navMb = document.querySelector("#navbar__list--mobile");
+          // sao chép
+          navMb.innerHTML = navPC.innerHTML;
+        </script>
       </div>
     </div>
 
@@ -247,7 +251,6 @@
                 src="./assets/img/dentist.jpg"
                 alt="Our services"
                 class="services__img"
-                data-aos="zoom-in"
               />
             </figure>
             <!-- services right -->
