p5 responsive teamlist install

--- a/index.html
+++ b/index.html
@@ -233,12 +233,7 @@
       <!-- services -->
       <section class="services">
         <div class="container">
-          <h2
-            class="services__heading section-heading"
-            data-aos="animate__bounce"
-          >
-            Our services
-          </h2>
+          <h2 class="services__heading section-heading">Our services</h2>
           <p class="services__desc section-desc">
             Exceptional dental care of all ages. Your great smile begins with a
             great dentist.
@@ -433,13 +428,7 @@
       <section class="team">
         <div class="container">
           <div class="team-header">
-            <h2
-              class="section-heading"
-              data-aos="zoom-in"
-              data-aos-delay="1000"
-            >
-              Our virtual dentist
-            </h2>
+            <h2 class="section-heading">Our virtual dentist</h2>
             <a href="#!" class="btn team__cta">Meet our dentist</a>
           </div>
 
