--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
           <!-- top footer  -->
           <div class="footer__top">
             <!-- column1 -->
-            <div class="footer__column">
+            <div class="footer__column footer-hiden--tablet">
               <!-- logo -->
               <a href="./"
                 ><img
